--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.5",
     "openai": "^5.10.1",
-    "plivo": "^4.75.1"
+    "plivo": "^4.75.1",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
